# nasca-test-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: build.yml
ansible/: inventory.ini  playbook.yml
ansible/group_vars/: all.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/: .env.j2  docker-compose.yml.j2
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: main.yml
app/: main.py  schema.py
app/scripts/: server-info.sh
app/tests/: test_app.py
