[project]
name = "nasca-test-app"
version = "0.1.0"
description = ""
authors = [
    {name = "xifOO",email = "wedyi28111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.135.3,<0.136.0)", "uvicorn[standard] (>=0.44.0,<0.45.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
